--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:text="Email:"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/last"
         app:layout_constraintVertical_bias="0.645" />
@@ -58,7 +58,7 @@
         app:layout_constraintVertical_bias="0.447" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/email"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.255" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/phonenumber"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -84,7 +84,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintVertical_bias="0.435" />
 
     <TextView
@@ -107,7 +107,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="12dp"
         android:text="Phone Number:"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
+        app:layout_constraintBottom_toTopOf="@+id/phonenumber"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
