--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -50,7 +50,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signup"
         android:layout_width="103dp"
         android:layout_height="40dp"
         android:text="Sign Up"
@@ -127,8 +127,9 @@
         android:layout_width="347dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
-        android:text="Description for registering...."
+        android:text="Register to to receive points, discounts, tips and review services of Service Providers.. "
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
