--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -127,9 +127,9 @@
         android:layout_width="347dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
-        android:text="Register to to receive points, discounts, tips and review services of Service Providers.. "
-        app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
+        android:text="Register to to receive points, discounts, tips and review services of Service Providers. "
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
