--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -67,7 +67,7 @@
         android:hint="xxx-xxx-xxxx"
         android:inputType="phone"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/signup"
+        app:layout_constraintBottom_toTopOf="@+id/next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintVertical_bias="0.07" />
@@ -80,13 +80,13 @@
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
         android:text="Phone Number:"
-        app:layout_constraintBottom_toTopOf="@+id/signup"
+        app:layout_constraintBottom_toTopOf="@+id/next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="0.612" />
 
     <Button
-        android:id="@+id/signup"
+        android:id="@+id/next"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:text="Next"
@@ -133,7 +133,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
         android:text="Vendor:"
-        app:layout_constraintBottom_toTopOf="@+id/signup"
+        app:layout_constraintBottom_toTopOf="@+id/next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="0.033" />
@@ -239,7 +239,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/signup"
+        app:layout_constraintBottom_toTopOf="@+id/next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/address" />
