--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -78,7 +78,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:ems="10"
-        android:hint="xxx-xxx-xxxx"
+        android:hint=""
         android:inputType="phone"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/signup"
@@ -115,7 +115,7 @@
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:text="Sign Up"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,12 +190,11 @@
         android:id="@+id/vendorB"
         android:layout_width="130dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
         android:text="Register as vendor"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/signup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
