--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -89,7 +89,7 @@
         android:id="@+id/next"
         android:layout_width="130dp"
         android:layout_height="35dp"
-        android:text="Next"
+        android:text="Signup"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -259,48 +259,5 @@
         android:spinnerMode="dropdown"
         app:layout_constraintStart_toEndOf="@+id/zipcode"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
-        android:layout_marginBottom="12dp"
-        android:text="Service:"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="152dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView15"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/vendor" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="76dp"
-        android:layout_marginRight="76dp"
-        android:layout_marginBottom="12dp"
-        android:text="Pay Rate $/hr:"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="158dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="144dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintStart_toEndOf="@+id/email2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
