--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".mainScreen">
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/appliances"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
