--- a/app/src/main/res/layout/activity_vendor_login.xml
+++ b/app/src/main/res/layout/activity_vendor_login.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".vendorLogin">
 
     <EditText
         android:id="@+id/password"
@@ -44,24 +43,11 @@
         android:id="@+id/signup"
         android:layout_width="211dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="140dp"
         android:text="Signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/skip"
-        android:layout_width="120dp"
-        android:layout_height="31dp"
-        android:background="#0000"
-        android:text="Skip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup"
-        app:layout_constraintVertical_bias="0.152" />
 
     <TextView
         android:id="@+id/textView6"
@@ -103,13 +89,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.894" />
 
-    <Button
-        android:id="@+id/vendorLogin"
-        android:layout_width="211dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="140dp"
-        android:text="Login as vendor"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="160dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="192dp"
+        android:gravity="center"
+        android:text="Welcome Vendor"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
