--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -20,10 +20,11 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.573"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.191" />
+        app:layout_constraintVertical_bias="0.132"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
@@ -36,7 +37,7 @@
         app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.886" />
+        app:layout_constraintVertical_bias="0.806" />
 
     <EditText
         android:id="@+id/email2"
@@ -46,13 +47,14 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordv"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -75,11 +77,11 @@
 
     <Button
         android:id="@+id/next"
-        android:layout_width="130dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="165dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="40dp"
         android:text="Signup"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -89,7 +91,7 @@
         android:id="@+id/textView7"
         android:layout_width="360dp"
         android:layout_height="55dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="Become an approved vendor for one or more services. You will have the option to provide your sample rates for each service. You must agree to pay a 20% fee of money received."
         android:textSize="13sp"
@@ -106,7 +108,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Vendor"
         android:inputType="textPersonName"
@@ -127,7 +129,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
-        android:hint="Passoword"
+        android:hint="Password"
         android:inputType="textPassword"
         android:paddingTop="2dp"
         android:textSize="14sp"
@@ -144,24 +146,24 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="228dp"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPostalAddress"
         android:paddingTop="2dp"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/zipcode"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/zipcode"
         android:layout_width="116dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="172dp"
         android:ems="10"
         android:hint="Zipcode"
         android:inputType="number"
@@ -172,11 +174,11 @@
 
     <EditText
         android:id="@+id/city"
-        android:layout_width="166dp"
+        android:layout_width="174dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="172dp"
         android:ems="10"
         android:hint="City"
         android:inputType="textPersonName"
@@ -187,13 +189,35 @@
 
     <Spinner
         android:id="@+id/states"
-        android:layout_width="67dp"
+        android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="172dp"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/zipcode" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginBottom="124dp"
+        android:gravity="center"
+        android:text="Agree to pay 20% of money earned."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="56dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="124dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintStart_toEndOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
