Update vendor registration, created vendor login and vendor main screen activity.

--- a/app/src/main/res/layout/activity_vendor_main_screen.xml
+++ b/app/src/main/res/layout/activity_vendor_main_screen.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".vendorMainScreen">
 
+    <Button
+        android:id="@+id/addService"
+        android:layout_width="265dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="104dp"
+        android:text="Add Services"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/acceptService"
+        android:layout_width="265dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="436dp"
+        android:text="Accept Services"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
