--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -10,12 +10,12 @@
     <View
         android:id="@+id/divider3"
         android:layout_width="395dp"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="#0049A0FC"
+        android:background="#1067CA"
         android:scrollbarSize="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
