--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
-        android:text="Login"
+        android:text="Login "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/signup"
         android:layout_width="211dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="144dp"
         android:text="Signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,14 +54,13 @@
         android:id="@+id/skip"
         android:layout_width="120dp"
         android:layout_height="31dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginBottom="44dp"
         android:background="#0000"
         android:text="Skip"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup"
-        app:layout_constraintVertical_bias="0.152" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -83,7 +82,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/SMSLogoDark" />
 
     <EditText
         android:id="@+id/email"
@@ -107,7 +106,7 @@
         android:id="@+id/vendorLogin"
         android:layout_width="211dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="88dp"
         android:text="Login as vendor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
