--- a/app/src/main/res/layout/activity_vendor_login.xml
+++ b/app/src/main/res/layout/activity_vendor_login.xml
@@ -69,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/SMSLogoLight" />
+        app:srcCompat="@drawable/logolight" />
 
     <EditText
         android:id="@+id/email"
