--- a/app/src/main/res/layout/activity_electrical.xml
+++ b/app/src/main/res/layout/activity_electrical.xml
@@ -71,7 +71,7 @@
         android:layout_marginLeft="117dp"
         android:layout_marginTop="20dp"
         android:background="@android:drawable/alert_light_frame"
-        android:hint="Please provide additional details here."
+        android:hint="Please provide additional details here. (optional)"
         android:inputType="textMultiLine"
         android:visibility="visible"
         android:maxLength="300"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@id/spinner_area_electrical" />
 
     <Button
-        android:id="@+id/orders"
+        android:id="@+id/submit"
         android:layout_width="159dp"
         android:layout_height="39dp"
         android:layout_marginBottom="50dp"
