Added computer repair.

--- a/app/src/main/res/layout/activity_computer_repair.xml
+++ b/app/src/main/res/layout/activity_computer_repair.xml
@@ -15,63 +15,43 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/tutoring" />
+        app:srcCompat="@drawable/computer_repair_icon" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Tutoring"
-        android:textSize="40dp"
+        android:text="Computer Repair"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinner_subject"
-        android:entries="@array/subject_tutoring"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:spinnerMode="dropdown"
-        android:textSize="65dp"
-        android:textStyle="bold"
-
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Spinner
-        android:id="@+id/spinner_grade"
-        android:entries="@array/Grade"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:spinnerMode="dropdown"
-        android:textSize="65dp"
-        android:textStyle="bold"
-
-        android:layout_marginTop="20dp"
+    <TextView
+        android:id="@+id/Disclaimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="IT specialist will come to your building during business hours and diagnose your computer(s) for any issues and charge accordingly."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_subject" />
-
+        app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <EditText
         android:id="@+id/details"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:background="@android:drawable/alert_light_frame"
-        android:hint="Please provide additional details here. (optional)"
+        android:hint="Please provide details here. (required)"
         android:maxLength="300"
         android:visibility="visible"
 
         app:layout_constraintBottom_toTopOf="@+id/submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinner_grade"
-        />
+        app:layout_constraintTop_toBottomOf="@id/Disclaimer" />
 
     <Button
         android:id="@+id/submit"
@@ -92,6 +72,8 @@
         android:text="0/300"
         app:layout_constraintRight_toRightOf="@id/details"
         app:layout_constraintTop_toBottomOf="@id/details" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
